--- a/.travis.yml
+++ b/.travis.yml
@@ -3,15 +3,35 @@ os: osx
 
 language: c
 
-# gd fontconfig jasper libgphoto2 libicns
+## all packages after rpm is required for rpm
+
+before_install:
+  - brew install p7zip --force-bottle
 
 script:
+  - ln -sf $PWD/github-release /usr/local/bin/github-release
+
+  # linux-tools
+  - mkdir homebrew && curl -L https://github.com/Homebrew/brew/tarball/master | tar xz --strip 1 -C homebrew
+  - homebrew/bin/brew install gnu-tar xz rpm --force-bottle
+  - cd homebrew
+
+  - 7za a -m0=lzma2 -mx=9 -mfb=64 -md=64m -ms=on -xr'!man' -xr'!doc' -xr'!include' -xr'!CHANGES' /tmp/linux-tools-mac-10.12.7z bin Cellar lib opt
+
+  - CHECKSUM=$(shasum -a 512 /tmp/linux-tools-mac-10.12.7z | xxd -r -p | base64)
+  - 'github-release electron-userland/electron-builder-binaries linux-tools-mac-10.12 master "Sha512: $CHECKSUM" /tmp/linux-tools-mac-10.12.7z'
+
+  # wine
   - cd /usr/local/Cellar
-  - brew install wine p7zip git-lfs gnu-tar dpkg xz --force-bottle --without-x11
-  - brew cleanup
-  - brew prune
-  - rm -f ~/wine.7z
-  - rm -rf /usr/local/Cellar/wine/*/share/wine/gecko
-  - rm -rf /usr/local/Cellar/wine/*/share/wine/mono
-  - 7za a -m0=lzma2 -mx=9 -mfb=64 -md=64m -ms=on -xr!man -xr!doc ~/wine.7z gnutls libtasn1 libusb libusb-compat nettle openssl wine git-lfs gnu-tar dpkg xz
-  - curl -T ~/wine.7z -udevelar:${BT_API_KEY} "https://api.bintray.com/content/develar/bin/electron-builder-mac-test-bottle/2.0/wine-2.0.7z?override=1&publish=1"
+  - brew install wine --force-bottle --without-x11
+  - rm -rf wine/*/share/wine/gecko
+  - rm -rf wine/*/share/wine/mono
+
+  - cd wine/2.*
+  - rm -rf include
+  - rm -f bin/widl
+  - rm -rf .bottle
+  - rm -rf .brew
+  - 7za a -m0=lzma2 -mx=9 -mfb=64 -md=64m -ms=on -xr!man -xr!doc /tmp/wine-2.0.1-mac-10.12.7z .
+  - CHECKSUM=$(shasum -a 512 /tmp/wine-2.0.1-mac-10.12.7z | xxd -r -p | base64)
+  - 'github-release electron-userland/electron-builder-binaries wine-2.0.1-mac-10.12 master "Sha512: $CHECKSUM" /tmp/wine-2.0.1-mac-10.12.7z'
