--- a/.travis.yml
+++ b/.travis.yml
@@ -11,10 +11,10 @@ script:
 
   # linux-tools
   - ./prepare.sh
-  - homebrew/bin/brew install gnu-tar xz rpm --force-bottle
+  - homebrew/bin/brew install gnu-tar xz lzip --force-bottle
   - cd homebrew
 
-  - 7za a -m0=lzma2 -mx=9 -mfb=64 -md=64m -ms=on -xr'!man' -xr'!doc' -xr'!include' -xr'!CHANGES' /tmp/linux-tools-mac-10.12.7z bin Cellar lib opt
+  - 7za a -m0=lzma2 -mx=9 -mfb=64 -md=64m -ms=on -xr'!man' -xr'!doc' -xr'!include' -xr'!CHANGES' /tmp/linux-tools-mac-10.12.1.7z bin Cellar lib opt
 
-  - CHECKSUM=$(shasum -a 512 /tmp/linux-tools-mac-10.12.7z | xxd -r -p | base64)
-  - 'github-release electron-userland/electron-builder-binaries linux-tools-mac-10.12 master "Sha512: $CHECKSUM" /tmp/linux-tools-mac-10.12.7z'
+  - CHECKSUM=$(shasum -a 512 /tmp/linux-tools-mac-10.12.1.7z | xxd -r -p | base64)
+  - 'github-release electron-userland/electron-builder-binaries linux-tools-mac-10.12.1 master "Sha512: $CHECKSUM" /tmp/linux-tools-mac-10.12.1.7z'
