--- a/.travis.yml
+++ b/.travis.yml
@@ -6,10 +6,10 @@ language: c
 script:
   - export PATH=$PWD/vendor:$PATH
   - ./prepare.sh
-  - homebrew/bin/brew install gnu-tar xz lzip
+  - homebrew/bin/brew install gnu-tar lzip
   - cd homebrew
 
-  - 7za a -m0=lzma2 -mx=9 -mfb=64 -md=64m -ms=on -xr'!man' -xr'!doc' -xr'!include' -xr'!CHANGES' /tmp/linux-tools-mac-10.12.2.7z bin Cellar lib opt
+  - 7za a -m0=lzma2 -mx=9 -mfb=64 -md=64m -ms=on -xr'!man' -xr'!doc' -xr'!include' -xr'!CHANGES' /tmp/linux-tools-mac-10.12.3.7z bin Cellar lib opt
 
   - CHECKSUM=$(shasum -a 512 /tmp/linux-tools-mac-10.12.2.7z | xxd -r -p | base64)
-  - 'github-release electron-userland/electron-builder-binaries linux-tools-mac-10.12.2 master "Sha512: $CHECKSUM" /tmp/linux-tools-mac-10.12.2.7z'
+  - 'github-release electron-userland/electron-builder-binaries linux-tools-mac-10.12.2 master "Sha512: $CHECKSUM" /tmp/linux-tools-mac-10.12.3.7z'
