--- a/.travis.yml
+++ b/.travis.yml
@@ -9,7 +9,7 @@ script:
   - homebrew/bin/brew install lzip gnu-tar
   - cd homebrew
 
-  - 7za a -m0=lzma2 -mx=9 -mfb=64 -md=64m -ms=on -xr'!man' -xr'!doc' -xr'!include' -xr'!CHANGES' /tmp/linux-tools-mac-10.12.3.7z bin Cellar lib opt
+  - 7za a -m0=lzma2 -mx=9 -mfb=64 -md=64m -ms=on -xr'!man' -xr'!doc' -xr'!include' -xr'!CHANGES' /tmp/linux-tools-mac-10.12.3.7z bin Cellar opt
 
   - CHECKSUM=$(shasum -a 512 /tmp/linux-tools-mac-10.12.3.7z | xxd -r -p | base64)
   - 'github-release electron-userland/electron-builder-binaries linux-tools-mac-10.12.3 master "Sha512: $CHECKSUM" /tmp/linux-tools-mac-10.12.3.7z'
