--- a/.travis.yml
+++ b/.travis.yml
@@ -54,5 +54,16 @@ script:
   - rm -f /tmp/linux-tools-mac-10.12.4.7z
   - 7za a -m0=lzma2 -mx=9 -mfb=64 -md=64m -ms=on -xr'!man' -xr'!doc' -xr'!include' -xr'!CHANGES' /tmp/linux-tools-mac-10.12.3.7z bin Cellar opt
 
+      test do
+        # Requires Windows PE executable as input, so we're just showing the version
+        assert_match "osslsigncode", shell_output("#{bin}/osslsigncode --version", 255)
+      end
+    end
+
+  - bin/brew install osslsigncode --HEAD
+  - ./cleanup.sh
+  - rm -f /tmp/linux-tools-mac-10.12.4.7z
+  - 7za a -m0=lzma2 -mx=9 -mfb=64 -md=64m -ms=on -xr'!man' -xr'!doc' -xr'!include' -xr'!CHANGES' /tmp/linux-tools-mac-10.12.4.7z bin Cellar opt
+
   - CHECKSUM=$(shasum -a 512 /tmp/linux-tools-mac-10.12.4.7z | xxd -r -p | base64)
   - 'github-release electron-userland/electron-builder-binaries linux-tools-mac-10.12.4 master "Sha512: $CHECKSUM" /tmp/linux-tools-mac-10.12.4.7z'
