--- a/.travis.yml
+++ b/.travis.yml
@@ -1,4 +1,4 @@
-osx_image: xcode8.3
+osx_image: xcode9.2
 os: osx
 
 language: c
@@ -6,10 +6,53 @@ language: c
 script:
   - export PATH=$PWD/vendor:$PATH
   - ./prepare.sh
-  - homebrew/bin/brew install lzip gnu-tar
+  - homebrew/bin/brew install --force-bottle lzip gnu-tar desktop-file-utils glib libgsf
   - cd homebrew
 
+  - |
+    cat <<EOF >Library/Taps/homebrew/homebrew-core/Formula/osslsigncode.rb
+    class Osslsigncode < Formula
+      desc "Authenticode signing of PE(EXE/SYS/DLL/etc), CAB and MSI files"
+      homepage "https://sourceforge.net/projects/osslsigncode/"
+      url "https://downloads.sourceforge.net/project/osslsigncode/osslsigncode/osslsigncode-1.7.1.tar.gz"
+      sha256 "f9a8cdb38b9c309326764ebc937cba1523a3a751a7ab05df3ecc99d18ae466c9"
+
+      bottle do
+        cellar :any
+        sha256 "4e079298b889a8ff8b629bc97323852b7f9e342de55ab74e601c995e6ad585f1" => :high_sierra
+        sha256 "898333a70f9700c159c8a29b7452c210f61004b23f39b0637131f7257f9250ec" => :sierra
+        sha256 "ed69f3ff0b8144a10a66cbe0a1986717a5564415768530110ae66749777f3490" => :el_capitan
+        sha256 "5f3799537630936f8d7954e9ec28f191fff6e1713f6b209aa94b2b665e5eaf88" => :yosemite
+        sha256 "59da5261972c8d26f0238c6ea42f5b247489d41e7ce6525c703675a22e260cfa" => :mavericks
+        sha256 "49a6dd76e78c82062041e5025ed1e7d71f1c53b51ef0e314a5e6938a07b6e49d" => :mountain_lion
+      end
+
+      head do
+        url "https://github.com/develar/osslsigncode.git"
+        depends_on "automake" => :build
+      end
+
+      depends_on "pkg-config" => :build
+      depends_on "autoconf" => :build
+      depends_on "openssl"
+      depends_on "libgsf"
+
+      def install
+        system "autoreconf", "-ivf" if build.head?
+        system "./configure", "--prefix=#{prefix}"
+        system "make", "install"
+      end
+
+      test do
+        # Requires Windows PE executable as input, so we're just showing the version
+        assert_match "osslsigncode", shell_output("#{bin}/osslsigncode --version", 255)
+      end
+    end
+
+  - bin/brew install osslsigncode --HEAD
+  - ./cleanup.sh
+  - rm -f /tmp/linux-tools-mac-10.12.4.7z
   - 7za a -m0=lzma2 -mx=9 -mfb=64 -md=64m -ms=on -xr'!man' -xr'!doc' -xr'!include' -xr'!CHANGES' /tmp/linux-tools-mac-10.12.3.7z bin Cellar opt
 
-  - CHECKSUM=$(shasum -a 512 /tmp/linux-tools-mac-10.12.3.7z | xxd -r -p | base64)
-  - 'github-release electron-userland/electron-builder-binaries linux-tools-mac-10.12.3 master "Sha512: $CHECKSUM" /tmp/linux-tools-mac-10.12.3.7z'
+  - CHECKSUM=$(shasum -a 512 /tmp/linux-tools-mac-10.12.4.7z | xxd -r -p | base64)
+  - 'github-release electron-userland/electron-builder-binaries linux-tools-mac-10.12.4 master "Sha512: $CHECKSUM" /tmp/linux-tools-mac-10.12.4.7z'
